--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -14,45 +14,31 @@
 
 		   <ul class="about">
 
-            <li>
-                <i class="glyphicon glyphicon-user"></i>
-                <label>Name</label>
-                <span class="value">Brown Smith</span>
-                <div class="clear"></div>
-            </li>
-
-            <li>
-                <i class="glyphicon glyphicon-calendar"></i>
-                <label>Date of birth</label>
-                <span class="value">March 18, 1988</span>
-                <div class="clear"></div>
-            </li>
-
             <li> 
                 <i class="glyphicon glyphicon-map-marker"></i>
                 <label>Adress</label>
-                <span class="value">San Francisco , CA</span>
+                <span class="value">Sacramento, CA</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-envelope"></i>
                 <label>Email</label>
-                <span class="value">brown.smith@gmail.com</span>
+                <span class="value">rajatc18@gmail.com</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-phone"></i>
                 <label>Phone</label>
-                <span class="value">+123 (21) 1234-5678</span>
+                <span class="value">+1 (916) 284 6325</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-globe"></i>
                 <label>Website</label>
-                <span class="value"><a href="#" target="_blank">sc.chinaz.com</a></span>
+                <span class="value"><a href="#" target="_blank">www.rajatc.com</a></span>
                 <div class="clear"></div>
             </li>
 
