--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -16,7 +16,7 @@
 
             <li> 
                 <i class="glyphicon glyphicon-map-marker"></i>
-                <label>Adress</label>
+                <label>Address</label>
                 <span class="value">Sacramento, CA</span>
                 <div class="clear"></div>
             </li>
