--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -47,12 +47,12 @@
 
         <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis.
+            I provide technical expertise in statistical analysis and visualization of big data in engineering research and development. I have worked extensively in developing advanced code, implementing simulations and devising wind-tunnel experiments for turbulent flows over buildings, aircraft and space vehicles.
         </p>
         
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. 
+            I am seeking career opportunities in helping industries apply interdisciplinary approaches of algorithms and simulations to extract insight from their structured and unstructured data. In my free time, I enjoy photography, playing chess, public speaking, and widening my horizons in death metal. 
 
         </p>
 
