--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -47,7 +47,7 @@
 
         <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            I provide technical expertise in statistical analysis and visualization of big data in engineering research and development. I have worked extensively in developing advanced code, implementing simulations and devising wind-tunnel experiments for turbulent flows over buildings, aircraft and space vehicles.
+            I provide technical expertise in machine learning, statistical analysis, and visualization of structured and unstructured data. For 9+ years, I have consulted and deployed AI/ML products across various sectors including research labs, mortgage lending, healthcare, retail, and music.
         </p>
         
          <p style="margin-bottom:20px">
