--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -52,7 +52,7 @@
         
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            I am seeking career opportunities in helping industries apply interdisciplinary approaches of algorithms and simulations to extract insight from their structured and unstructured data. In my free time, I enjoy photography, playing chess, public speaking, and widening my horizons in death metal. 
+            In my free time, I enjoy photography, playing chess, public speaking, and widening my horizons in death metal. 
 
         </p>
 
