--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -47,7 +47,7 @@
 
         <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            I provide technical expertise in machine learning, statistical analysis, and visualization of structured and unstructured data. For 9+ years, I have consulted and deployed AI/ML products across various sectors including research labs, mortgage lending, healthcare, retail, and music.
+            I provide technical expertise in machine learning, statistical analysis, and visualization of structured and unstructured data. For 9+ years, I have consulted and deployed AI/ML products across various sectors including research labs, mortgage lending, healthcare, retail, and music. I'm always on the lookout for new opportunities and freelancing.
         </p>
         
          <p style="margin-bottom:20px">
