--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -77,7 +77,7 @@
 <div class="row" id="services">
 	<div class="col-md-12">
         <div class="title_content">
-            <div class="text_content">My Services 1</div>
+            <div class="text_content">My Services</div>
             <div class="clear"></div>
         </div>
 
@@ -86,8 +86,8 @@
             <div class="service">
                 <div class="service-icon"><i class="fa fa-tag"></i></div>
                 <div class="service-detail">
-                    <h6>Making Money</h6>
-                    <p>Fusce quis interdum ipsum.Suspendi suscipit vehicula sapienid mattis. Lorem ipsum amet consectetur.</p>
+                    <h6>Data Analyst</h6>
+                    <p>ETL frameworks for big data, regression, time-series forecasting, clustering, classification, exploratory data analysis, modeling and optimization.</p>
                 </div>
             </div>
         </div>
