--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -87,7 +87,7 @@
                 <div class="service-icon"><i class="fa fa-tag"></i></div>
                 <div class="service-detail">
                     <h6>Data Analysis</h6>
-                    <p>ETL frameworks for big data, regression, time-series forecasting, clustering, classification, exploratory data analysis, modeling and optimization.</p>
+                    <p>ETL for big data, regression, time-series forecasting, clustering, classification, exploratory data analysis, modeling and optimization.</p>
                 </div>
             </div>
         </div>
