--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -87,7 +87,7 @@
                 <div class="service-icon"><i class="fa fa-tag"></i></div>
                 <div class="service-detail">
                     <h6>Data Analysis</h6>
-                    <p>ETL for big data, regression, time-series forecasting, clustering, classification, exploratory data analysis, modeling and optimization.</p>
+                    <p>Regression, time-series forecasting, clustering, classification, exploratory data analysis, neural networks, modeling and optimization.</p>
                 </div>
             </div>
         </div>
@@ -95,8 +95,8 @@
             <div class="service">
                 <div class="service-icon"><i class="fa fa-cogs"></i></div>
                 <div class="service-detail">
-                    <h6>Easy to Customize</h6>
-                    <p>Fusce quis interdum ipsum.Suspendi suscipit vehicula sapienid mattis. Lorem ipsum amet consectetur.</p>
+                    <h6>Data Engineering</h6>
+                    <p>Big Data pipelining (Spark, Hadoop), cloud (AWS, Azure), databases (MongoDB, Oracle) and ETL framworks.</p>
                 </div>
             </div>
         </div>
