--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -104,8 +104,8 @@
             <div class="service">
                 <div class="service-icon"><i class="fa fa-arrows-alt"></i></div>
                 <div class="service-detail">
-                    <h6>Moving Let Us Help</h6>
-                    <p>Fusce quis interdum ipsum.Suspendi suscipit vehicula sapienid mattis. Lorem ipsum amet consectetur.</p>
+                    <h6>Project Management</h6>
+                    <p>Strategic planning, resource management, budgeting, scheduling, supervision, and compliance (JIRA, monday.com).</p>
                 </div>
             </div>
         </div>
