--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -96,7 +96,7 @@
                 <div class="service-icon"><i class="fa fa-cogs"></i></div>
                 <div class="service-detail">
                     <h6>Data Engineering</h6>
-                    <p>Big Data pipelining (Spark, Hadoop), cloud applications (AWS, Azure), databases (MongoDB, Oracle) and ETL framworks.</p>
+                    <p>Big Data pipelining (Spark, Hadoop), cloud applications (AWS, Azure), databases (MongoDB, Oracle) and ETL frameworks.</p>
                 </div>
             </div>
         </div>
