--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -1,7 +1,7 @@
 <!-- .resume -->
 <div id="resume" class="content_2">
     <!-- .title -->
-<h1 class="h-bloc">Resume - Personal Info</h1> 
+<h1 class="h-bloc">Resume</h1> 
 
 <div class="row">
 
@@ -241,7 +241,7 @@
     <div class="col-md-6 resume-left">    
         <!-- .title_content -->
         <div class="title_content" style="margin-bottom:5px">
-            <div class="text_content">Experience</div>
+            <div class="text_content">Relevant Experience</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
@@ -249,9 +249,9 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Web Developer <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Data Scientist & Project Manager <span class="duration"><i class="fa fa-calendar color"></i> 2019 - Present</span></h5>
+                <h6><span class="fa fa-briefcase"></span> MachineVantage Inc. </h6>
+                <p>- Developed fuzzy logic pricing models that automate and maximize broker compensation and profit for a leading mortgage lender.</p>
             </li>
             <li>
                 <h5>Front-End Developer <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
