--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -249,7 +249,7 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Data Scientist & Project Manager <span class="duration"><i class="fa fa-calendar color"></i> 2019 - Present</span></h5>
+                <h5>Data Scientist | Project Manager<span class="duration"><i class="fa fa-calendar color"></i> 2019 - Present</span></h5>
                 <h6><span class="fa fa-briefcase"></span> MachineVantage Inc. </h6>
                 <p>- Developed fuzzy logic pricing models that automate and maximize broker compensation and profit for a leading mortgage lender.</p>
             </li>
