--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -249,9 +249,12 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Data Scientist | Project Manager<span class="duration"><i class="fa fa-calendar color"></i> 2019 - Present</span></h5>
-                <h6><span class="fa fa-briefcase"></span> MachineVantage Inc. </h6>
-                <p>- Developed fuzzy logic pricing models that automate and maximize broker compensation and profit for a leading mortgage lender.</p>
+                <h5>Data Scientist | Project Manager<span class="duration"><i class="fa fa-calendar color"></i> 2020 - Present</span></h5>
+                <h6><span class="fa fa-briefcase"></span> MachineVantage Inc.</h6>
+                <p>- Developed fuzzy logic pricing models that maximize broker compensation for a leading American mortgage lender.</p>
+		<p>- Designed neural networks that forecast retail chocolate sales using social listening analysis with 95% accuracy.</p>
+		<p>- Implemented classifiers that predict the mood of songs using harmony, rhythm and spectral features with 90% accuracy.</p>
+		<p>- Piloted work allocation, resource management and scheduling for a cross-functional team of scientists and developers.</p>
             </li>
             <li>
                 <h5>Front-End Developer <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
