--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -257,10 +257,11 @@
 		<p>- Piloted work allocation, resource management and scheduling for a cross-functional team of scientists and developers.</p>
             </li>
             <li>
-                <h5>Front-End Developer <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
-            </li>
+                <h5>Research Assistant<span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2019</span></h5>
+                <h6><span class="fa fa-briefcase"></span> University of Saskatchewan</h6>
+                <p>- Implemented an advanced 3D code to simulate high-resolution flows over surface-mounted square prisms using multigrid methods and Large Eddy Simulation (LES).</p>
+                <p>- Performed reduced order modeling (PCA, EDA, SVD) and time series analysis (spectral methods) on turbulent flow fields (150M+ data points) to extract periodic flow features.</p>
+	    </li>
 
         </ul>
         <!-- /.attributes -->
