--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -260,7 +260,7 @@
                 <h5>Research Assistant<span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2019</span></h5>
                 <h6><span class="fa fa-briefcase"></span> University of Saskatchewan</h6>
                 <p>- Implemented an advanced 3D code to simulate high-resolution flows over surface-mounted square prisms using multigrid methods and Large Eddy Simulation (LES).</p>
-                <p>- Performed reduced order modeling (PCA, EDA, SVD) and time series analysis (spectral methods) on turbulent flow fields (150M+ data points) to extract periodic flow features.</p>
+                <p>- Performed reduced order modeling (PCA, DMD) and time series analysis (spectral methods) on turbulent flow fields (150M+ data points) to extract periodic flow features.</p>
 	    </li>
 
         </ul>
@@ -277,13 +277,13 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Master of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
+                <h5>Ph.D in Mechanical Engineering<span class="duration"><i class="fa fa-calendar color"></i>2011 - 2017</span></h5>
+                <h6><span class="fa fa-book"></span> University of Saskatchewan</h6>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
             </li>
             <li>
-                <h5>Bachelor of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
+                <h5>BS+MS in Aerospace Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2006 - 2011</span></h5>
+                <h6><span class="fa fa-book"></span> Indian Institute of Technology Bombay</h6>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
             </li>
         </ul>
