--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -279,12 +279,12 @@
             <li class="first">
                 <h5>Ph.D in Mechanical Engineering<span class="duration"><i class="fa fa-calendar color"></i>2011 - 2017</span></h5>
                 <h6><span class="fa fa-book"></span> University of Saskatchewan</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <p>My thesis focused on improving the understanding of the flow field above the free end and in the wake of surface-mounted cylinders and square prisms. Of interest was to use advanced post-processing methodologies on flow fields obtained from wind-tunnel experiments and numerical simulations to gain novel physical insights on the flow topology.</p>
             </li>
             <li>
                 <h5>BS+MS in Aerospace Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2006 - 2011</span></h5>
                 <h6><span class="fa fa-book"></span> Indian Institute of Technology Bombay</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <p>My thesis focused on devising analytical methods to efficiently solve flow fields over hypersonic re-entry vehicles. Of interest was to validate the developed method with experiments in a shock tunnel and numerical simulations on commercial software.</p>
             </li>
         </ul>
         <!-- /.attributes -->
