--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -10,15 +10,15 @@
 
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Designs skills</div>
+            <div class="text_content">Data Analysis</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="95%">
-                <div class="skillbar-title"><span>Photoshop</span></div>
+            <div class="skillbar clearfix" data-percent="90%">
+                <div class="skillbar-title"><span>Python</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">95%</div>
             </div>
@@ -26,24 +26,24 @@
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="90%">
-                <div class="skillbar-title"><span>Illustrateur</span></div>
+            <div class="skillbar clearfix" data-percent="95%">
+                <div class="skillbar-title"><span>MATLAB</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">90%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="65%">
-                <div class="skillbar-title"><span>Indesign</span></div>
+            <div class="skillbar clearfix" data-percent="70%">
+                <div class="skillbar-title"><span>R</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">65%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="35%">
-                <div class="skillbar-title"><span>Flash</span></div>
+            <div class="skillbar clearfix" data-percent="50%">
+                <div class="skillbar-title"><span>SQL</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">35%</div>
             </div>
