--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -53,41 +53,41 @@
         
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Programming Skills</div>
+            <div class="text_content">Data Engineering</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="85%">
-                <div class="skillbar-title"><span>Wordpress</span></div>
+            <div class="skillbar clearfix" data-percent="70%">
+                <div class="skillbar-title"><span>Hadoop</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">85%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="75%">
-                <div class="skillbar-title"><span>Joomla</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">75%</div>
+                <div class="skill-bar-percent">70%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="60%">
-                <div class="skillbar-title"><span>Drupal</span></div>
+                <div class="skillbar-title"><span>Spark</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">60%</div>
             </div>
             <!-- /.skillbar -->
             
-             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="89%">
-                <div class="skillbar-title"><span>Php</span></div>
+            <!-- .skillbar -->
+            <div class="skillbar clearfix" data-percent="50%">
+                <div class="skillbar-title"><span>Scala</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">89%</div>
+                <div class="skill-bar-percent">50%</div>
+            </div>
+            <!-- /.skillbar -->
+            
+             <!-- .skillbar -->
+            <div class="skillbar clearfix" data-percent="40%">
+                <div class="skillbar-title"><span>Java</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">40%</div>
             </div>
             <!-- /.skillbar --> 
         </div>
@@ -95,41 +95,41 @@
          
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Office Skills</div>
+            <div class="text_content">Project Management</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
             
         <div class="skills">       
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="85%">
-                <div class="skillbar-title"><span>MS Excel</span></div>
+            <div class="skillbar clearfix" data-percent="80%">
+                <div class="skillbar-title"><span>JIRA</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">85%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="95%">
-                <div class="skillbar-title"><span>MS Word</span></div>
+            <div class="skillbar clearfix " data-percent="90%">
+                <div class="skillbar-title"><span>monday.com</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">95%</div>
+                <div class="skill-bar-percent">90%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="60%">
-                <div class="skillbar-title"><span>Powerpoint</span></div>
+                <div class="skillbar-title"><span>Microsoft Project</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">60%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="40%">
-                <div class="skillbar-title"><span>SharePoint</span></div>
+            <div class="skillbar clearfix " data-percent="80%">
+                <div class="skillbar-title"><span>Trello</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">40%</div>
+                <div class="skill-bar-percent">80%</div>
             </div>
             <!-- /.skillbar -->   
 		</div>
@@ -137,31 +137,15 @@
         
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Hobbies Skills</div>
+            <div class="text_content">Productivity</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="60%">
-                <div class="skillbar-title"><span>Music</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="95%">
-                <div class="skillbar-title"><span>Sport</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">95%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="85%">
-                <div class="skillbar-title"><span>Reading</span></div>
+            <div class="skillbar clearfix" data-percent="85%">
+                <div class="skillbar-title"><span>Microsoft Excel</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">85%</div>
             </div>
@@ -169,9 +153,25 @@
             
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="70%">
-                <div class="skillbar-title"><span>Travelling</span></div>
+                <div class="skillbar-title"><span>Git/Github</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">70%</div>
+            </div>
+            <!-- /.skillbar -->
+            
+            <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="60%">
+                <div class="skillbar-title"><span>Linux</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">60%</div>
+            </div>
+            <!-- /.skillbar -->
+            
+            <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="80%">
+                <div class="skillbar-title"><span>Adobe Photoshop</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">80%</div>
             </div>
             <!-- /.skillbar -->
         </div>
@@ -179,39 +179,39 @@
         
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Language Skills</div>
+            <div class="text_content">Languages</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="90%">
+            <div class="skillbar clearfix" data-percent="95%">
                 <div class="skillbar-title"><span>English</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">90%</div>
+                <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="80%">
-                <div class="skillbar-title"><span>French</span></div>
+            <div class="skillbar clearfix " data-percent="85%">
+                <div class="skillbar-title"><span>Hindi</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">80%</div>
+                <div class="skill-bar-percent">85%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="50%">
-                <div class="skillbar-title"><span>Spanish</span></div>
+            <div class="skillbar clearfix " data-percent="75%">
+                <div class="skillbar-title"><span>Bangla</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">50%</div>
+                <div class="skill-bar-percent">75%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="60%">
-                <div class="skillbar-title"><span>Swiss</span></div>
+                <div class="skillbar-title"><span>French</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">60%</div>
             </div>
