--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -250,7 +250,7 @@
         <ul class="attributes">
             <li class="first">
                 <h5>Data Scientist | Project Manager<span class="duration"><i class="fa fa-calendar color"></i> 2020 - Present</span></h5>
-                <h6><span class="fa fa-briefcase"></span> MachineVantage Inc.</h6>
+                <h6><span class="fa fa-briefcase"></span> MachineVantage Inc., Berkeley, CA</h6>
                 <p>- Developed fuzzy logic pricing models that maximize profitability and broker compensation for a leading American mortgage lender.</p>
 		<p>- Designed neural networks that forecast retail chocolate sales using social listening analysis with 95% accuracy.</p>
 		<p>- Implemented classifiers that predict the mood of songs using harmony, rhythm and spectral features with 90% accuracy.</p>
@@ -258,7 +258,7 @@
             </li>
             <li>
                 <h5>Research Assistant<span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2019</span></h5>
-                <h6><span class="fa fa-briefcase"></span> University of Saskatchewan</h6>
+                <h6><span class="fa fa-briefcase"></span> University of Saskatchewan, Canada</h6>
                 <p>- Implemented an advanced 3D code to simulate high-resolution flows over surface-mounted square prisms using multigrid methods and Large Eddy Simulation (LES).</p>
                 <p>- Performed reduced order modeling (PCA, DMD) and time series analysis (spectral methods) on turbulent flow fields (150M+ data points) to extract periodic flow features.</p>
 	    </li>
@@ -277,13 +277,13 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Ph.D in Mechanical Engineering<span class="duration"><i class="fa fa-calendar color"></i>2011 - 2017</span></h5>
-                <h6><span class="fa fa-book"></span> University of Saskatchewan</h6>
+                <h5>Ph.D in Mechanical Engg (GPA 92/100) <span class="duration"><i class="fa fa-calendar color"></i>2011 - 2017</span></h5>
+                <h6><span class="fa fa-book"></span>University of Saskatchewan, Canada</h6>
                 <p>My thesis focused on improving the understanding of the flow field above the free end and in the wake of surface-mounted cylinders and square prisms. Of interest was to use advanced post-processing methodologies on flow fields obtained from wind-tunnel experiments and numerical simulations to gain novel physical insights on the flow topology.</p>
             </li>
             <li>
-                <h5>BS+MS in Aerospace Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2006 - 2011</span></h5>
-                <h6><span class="fa fa-book"></span> Indian Institute of Technology Bombay</h6>
+                <h5>BS+MS in Aerospace Engg (GPA 9.5/10) <span class="duration"><i class="fa fa-calendar color"></i> 2006 - 2011</span></h5>
+                <h6><span class="fa fa-book"></span> Indian Institute of Technology Bombay, India</h6>
                 <p>My thesis focused on devising analytical methods to efficiently solve flow fields over hypersonic re-entry vehicles. Of interest was to validate the developed method with experiments in a shock tunnel and numerical simulations on commercial software.</p>
             </li>
         </ul>
