--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -24,7 +24,7 @@
             <li>
                 <i class="glyphicon glyphicon-envelope"></i>
                 <label>Email</label>
-                <span class="value">rajatc18@gmail.com</span>
+                <span class="value"><a href="mailto:rajatc18@gmail.com" target="_blank">rajatc18@gmail.com</a></span>
                 <div class="clear"></div>
             </li>
 
@@ -38,7 +38,7 @@
             <li>
                 <i class="glyphicon glyphicon-globe"></i>
                 <label>Website</label>
-                <span class="value"><a href="#" target="_blank">www.rajatc.com</a></span>
+                <span class="value"><a href="www.rajatc.com" target="_blank">www.rajatc.com</a></span>
                 <div class="clear"></div>
             </li>
 
