--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -249,7 +249,7 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Data Scientist | Project Manager<span class="duration"><i class="fa fa-calendar color"></i> 2020 - Present</span></h5>
+                <h5>Data Scientist<span class="duration"><i class="fa fa-calendar color"></i> 2020 - Present</span></h5>
                 <h6><span class="fa fa-briefcase"></span> MachineVantage Inc., Berkeley, CA</h6>
                 <p>- Developed fuzzy logic pricing models that maximize profitability and broker compensation for a leading American mortgage lender.</p>
 		<p>- Designed neural networks that forecast retail chocolate sales using social listening analysis with 95% accuracy.</p>
@@ -277,13 +277,13 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Ph.D in Mechanical Engg (GPA 92/100) <span class="duration"><i class="fa fa-calendar color"></i>2011 - 2017</span></h5>
-                <h6><span class="fa fa-book"></span>University of Saskatchewan, Canada</h6>
+                <h5>Ph.D in Mechanical Engg<span class="duration"><i class="fa fa-calendar color"></i>2011 - 2017</span></h5>
+                <h6><span class="fa fa-book"></span><a href="www.usask.ca" target="_blank">University of Saskatchewan, Canada</a></h6>
                 <p>My thesis focused on improving the understanding of the flow field above the free end and in the wake of surface-mounted cylinders and square prisms. Of interest was to use advanced post-processing methodologies on flow fields obtained from wind-tunnel experiments and numerical simulations to gain novel physical insights on the flow topology.</p>
             </li>
             <li>
-                <h5>BS+MS in Aerospace Engg (GPA 9.5/10) <span class="duration"><i class="fa fa-calendar color"></i> 2006 - 2011</span></h5>
-                <h6><span class="fa fa-book"></span> Indian Institute of Technology Bombay, India</h6>
+                <h5>BS+MS in Aerospace Engg<span class="duration"><i class="fa fa-calendar color"></i> 2006 - 2011</span></h5>
+                <h6><span class="fa fa-book"></span><a href="www.iitb.ac.in" target="_blank">Indian Institute of Technology Bombay, India</a></h6>
                 <p>My thesis focused on devising analytical methods to efficiently solve flow fields over hypersonic re-entry vehicles. Of interest was to validate the developed method with experiments in a shock tunnel and numerical simulations on commercial software.</p>
             </li>
         </ul>
