--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -38,7 +38,7 @@
             <li>
                 <i class="glyphicon glyphicon-globe"></i>
                 <label>Website</label>
-                <span class="value"><a href="www.rajatc.com" target="_blank">www.rajatc.com</a></span>
+                <span class="value"><a href="http://www.rajatc.com" target="_blank">www.rajatc.com</a></span>
                 <div class="clear"></div>
             </li>
 
