--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -250,7 +250,7 @@
         <ul class="attributes">
             <li class="first">
                 <h5>Data Scientist<span class="duration"><i class="fa fa-calendar color"></i> 2020 - Present</span></h5>
-                <h6><span class="fa fa-briefcase"></span> MachineVantage Inc., Berkeley, CA</h6>
+                <h6><span class="fa fa-briefcase"></span><a href="http://www.machinevantage.com/" target="_blank">MachineVantage Inc.</a>, Berkeley, CA</h6>
                 <p>- Developed fuzzy logic pricing models that maximize profitability and broker compensation for a leading American mortgage lender.</p>
 		<p>- Designed neural networks that forecast retail chocolate sales using social listening analysis with 95% accuracy.</p>
 		<p>- Implemented classifiers that predict the mood of songs using harmony, rhythm and spectral features with 90% accuracy.</p>
@@ -258,7 +258,7 @@
             </li>
             <li>
                 <h5>Research Assistant<span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2019</span></h5>
-                <h6><span class="fa fa-briefcase"></span> University of Saskatchewan, Canada</h6>
+                <h6><span class="fa fa-briefcase"></span><a href="http://www.usask.ca/" target="_blank">University of Saskatchewan, Canada</a></h6>
                 <p>- Implemented an advanced 3D code to simulate high-resolution flows over surface-mounted square prisms using multigrid methods and Large Eddy Simulation (LES).</p>
                 <p>- Performed reduced order modeling (PCA, DMD) and time series analysis (spectral methods) on turbulent flow fields (150M+ data points) to extract periodic flow features.</p>
 	    </li>
