--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,14 +1,14 @@
 <!-- profile -->
 <div id="profile" class="content_2">
     <!-- .title -->
-<h1 class="h-bloc">Summary</h1>
+<h1 class="h-bloc">About Rajat Chakravarty, Ph.D.</h1>
 
 <div class="row top-p">
     <div class="col-md-6 profile-l">
  		
         <!--About me-->
         <div class="title_content">
-            <div class="text_content">Rajat Chakravarty</div>
+            <div class="text_content">Summary</div>
             <div class="clear"></div>
         </div>
 
