--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,7 +22,7 @@
                     </div>
 
                     <ul>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Adress:</span> Sacramento, CA<br /><br /></li>
+                        <li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Address:</span> Sacramento, CA<br /><br /></li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-envelope"></i> Email:</span> rajatc18@gmail.com</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-phone"></i> Phone:</span> +1 (916) 284 6325</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-globe"></i> Website:</span> www.rajatc.com</li>
