--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
 <div class="row">
 
     <div class="col-lg-12">
-        <div id="map"></div>
+        <div id="map">Test</div>
     </div>  
 
     <div class="col-lg-12">
